# torbiz-desktop

./: .cursorignore  .dockerignore  .env  .gitignore  CPU_MODEL_SHARING_IMPLEMENTATION.md  DOCKER_MACOS_GUIDE.txt  DOCKER_README.txt  DOCKER_WORKFLOW_DIAGRAM.txt  Dockerfile  Dockerfile.macos  IMPLEMENTATION_SUMMARY.txt  NAVIGATION_GUIDE.md  PETALS_CUDA_FIX.md  QUICK_START.md  README.md  Readme.MD  UI_REVAMP_SUMMARY.md  api_documentation.txt  backend-api.txt  build-docker-macos.sh  docker-compose.macos.yml  index.html  package-lock.json  package.json  update_app.txt
.cursor/plans/: fix-petals-installation-630ad996.plan.md
.cursor/rules/: project-overview.mdc
.github/workflows/: release.yml
Template UI/llm-swarm-main/: README.md  index.html  tailwind.config.ts
Template UI/llm-swarm-main/src/: App.tsx  index.css
Template UI/llm-swarm-main/src/components/: ChatHeader.tsx  ChatInterface.tsx  ChatItemMenu.tsx  ChatSidebar.tsx  DeleteChatDialog.tsx
Template UI/llm-swarm-main/src/contexts/: ChatContext.tsx
Template UI/llm-swarm-main/src/pages/: Chat.tsx  Network.tsx  Profile.tsx  Settings.tsx
scripts/: update-version.cjs  update-version.js
src/: App.css  App.jsx
src-tauri/: =0.41.0  Cargo.toml  Cargo.toml.backup  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/py/: run_local_inference.py  run_petals_inference.py  run_petals_seeder.py
src-tauri/src/: hardware.rs  lib.rs  macos.rs  main.rs  oauth.rs  petals.rs  wsl.rs
src/app/: globals.css  layout.tsx  page.tsx  withAuth.tsx
src/app/auth/: page.tsx
src/app/chat/: page.tsk  page.tsx
src/app/contexts/: AuthContext.tsx
src/components/: GoogleLoginButton.jsx  HardwareInfoDisplay.jsx  HardwareInfoTest.jsx  LoginForm.jsx  ShareGpuModal.jsx  SignupForm.jsx
src/components/layout/: Navbar.tsx
src/context/: AuthContext.jsx
src/lib/: mockData.ts
src/pages/: AuthPage.jsx  ChatPage.jsx  HomePage.jsx  NetworkPage.jsx  NotFoundPage.jsx  ProfilePage.jsx  SettingsPage.jsx
src/services/: api.js  deepResearchService.js  directInferenceService.js  inferenceService.js  localInferenceService.js
src/utils/: hardwareService.js  tauriHelpers.js  updateService.js
test_files/: run_petals_wsl.ipynb
