[package]
name = "torbiz-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "torbiz_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# This is NOT needed for the notification plugin, only for the opener as previously fixed.
# tauri-plugin-opener = "2" 

[dependencies]
# CORRECTED: tauri is back to its default state
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# CORRECTED: The notification plugin is its own dependency
tauri-plugin-notification = "2.0.0-beta.9" 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
