[package]
name = "torbiz-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "torbiz_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2.0.0-beta.9" 
tauri-plugin-oauth = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System information dependencies
sysinfo = "0.31"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# URL encoding for OAuth
urlencoding = "2.1"

# Windows-specific dependencies for GPU detection
[target.'cfg(windows)'.dependencies]
wmi = "0.13"
