[package]
name = "torbiz-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "torbiz_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2.0.0-beta.9" 
tauri-plugin-oauth = "2"
tauri-plugin-os = "2"  # Added for platform detection
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System information dependencies
sysinfo = "0.31"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }

# URL encoding for OAuth
urlencoding = "2.1"

# Windows-specific dependencies for GPU detection
[target.'cfg(windows)'.dependencies]
wmi = "0.13"

# Unix-specific dependencies for graceful process shutdown
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }

# Development profile - fast incremental builds
[profile.dev]
opt-level = 0
incremental = true
codegen-units = 16  # Changed from 256 to prevent system overload

# Release profile - optimized for size and controlled memory usage
[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
